--- a/src/main/java/poo/infracciones/ui/PantallaGenerarReporteInfracciones.form
+++ b/src/main/java/poo/infracciones/ui/PantallaGenerarReporteInfracciones.form
@@ -255,6 +255,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Imprimir"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnImprimirActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="btnGenerar">
       <Properties>
